# candle-video

./: .gitignore  Cargo.toml  PLAN.md  README.PT_BR.md  README.RU.md  README.md  build_with_flash_attn.cmd  check_vae_keys.py  check_vae_keys.rs  compare_t5.py  generate_diffusers_reference.py  inspect_t5_ref.py  main.md  test_dit_forward.py  test_pipeline_forward.py  test_scheduler.py  test_vae_decode.py  test_vae_encode.py  test_vae_roundtrip.py  update_notebook.py  update_notebook_paths.py  verify_rng.py
.github/workflows/: go-test.yml  release-lib.yml  test-cross-os.yml
docs/: ltx_video_pipeline_comparison.md
examples/: verify_pipeline_step.rs  verify_scheduler_math.rs  verify_scheduler_step.rs  verify_t5.rs  verify_transformer.rs  verify_vae_decode.rs  verify_vae_tiling.rs
examples/ltx-video/: README.md  main.rs
go/: README.md  go.mod
go/candlevideo/: candle.h  e2e_hf_test.go  ffi_integration_test.go  health_test.go  libpath.go  libpath_test.go  loader_unix.go  loader_windows.go  options.go  options_test.go  version.go  version_test.go  video.go  video_test.go  video_windows.go
go/examples/ltx-video/: main.go
prebuilt/: README.RU.md  README.md
prebuilt/candle-flash-attn-59809d6940b6f0bb/: root-output  stderr
prebuilt/candle-kernels-00d4cbab2c6a62c1/: output  root-output
scripts/: analyze_debug_outputs.py  capture_denoising.py  capture_dit_ref.py  capture_embeddings.py  capture_full_pipeline.py  capture_pipeline_parity.py  capture_pipeline_step.py  capture_rng.py  capture_scheduler_math.py  capture_scheduler_parity.py  capture_scheduler_step.py  capture_t5_ref.py  capture_transformer_parity.py  capture_vae_decode.py  capture_vae_parity.py  capture_vae_tiling.py  capture_video_coords_parity.py  check_shapes.py  compare_attn_matrix.py  compare_dit.py  compare_dit_forward.py  compare_dit_layers.py  compare_freqs_cis.py  compare_rope_freqs.py  compare_rope_grid.py  compare_single_block.py  compare_svd_shapes.py  compare_svd_tensors.py  compare_timestep_emb.py  compare_vae.py  compare_vae_latents_bin.py  compare_vae_layers.py  create_dit_test_inputs.py  create_rust_test_data.py  debug_block0.py  debug_dit.py  debug_dit_layers.py  debug_dit_values.py  debug_rope_grid.py  decode_latents.py  (+15 more)
src/: config.rs  dit.rs  go_ffi.rs  latents_bin.rs  lib.rs  loader.rs  pipeline.rs  quantized_t5_encoder.rs  rope.rs  scheduler.rs  text_encoder.rs  vae.rs
src/common/: attention.rs  mod.rs  norms.rs  rope.rs
src/ltxv/: dit.rs  mod.rs  quantized_t5_encoder.rs
src/models/: mod.rs
src/models/ltx_video/: configs.rs  ltx_transformer.rs  mod.rs  quantized_t5_encoder.rs  scheduler.rs  t2v_pipeline.rs  text_encoder.rs  vae.rs  weight_format.rs
src/models/svd/: clip.rs  config.rs  mod.rs  pipeline.rs  weights.rs
src/models/svd/unet/: mod.rs  model.rs  resnet.rs
src/models/svd/vae/: encoder.rs  mod.rs
src/svd/: pipeline.rs  scheduler.rs
src/svd/unet/: blocks.rs  model.rs  transformer.rs
src/svd/vae/: decoder.rs
src/utils/: deterministic_rng.rs  mod.rs
tests/: check_vae_keys.rs  dit_debug_test.rs  dit_reference_test.rs  dit_tests.rs  integration.rs  latents_bin_tests.rs  loader_tests.rs  patch_embedding_tests.rs  pipeline_tests.rs  scheduler_tests.rs  text_encoder_tests.rs  vae_reference_test.rs  vae_tests.rs  verify_rope_parity.rs  verify_scheduler_parity.rs  verify_video_coords_parity.rs
