[package]
name = "candle-video"
version = "0.1.0"
edition = "2024"
authors = ["FerrisMind"]
description = "LTX-Video integration for Candle framework"
license = "Apache-2.0"
repository = "https://github.com/kawai-network/candle"

[lib]
name = "candle_video"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
candle-core = { version = "0.9.2", features = ["cuda", "cudnn"] }
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
candle-flash-attn = { version = "0.9.2", optional = true }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokenizers = "0.22"
thiserror = "2.0"
hf-hub = "0.4"
clap = { version = "4.0", features = ["derive"] }
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
statrs = "0.18"
gif = "0.14"
rayon = "1.0"
rand = "0.8"
regex = "1.0"



[features]
default = []
# GPU Acceleration
flash-attn = ["dep:candle-flash-attn"]
cuda = ["candle-core/cuda"]
# cuDNN for faster convolutions (requires CUDA)
cudnn = ["candle-core/cudnn"]
# Intel MKL for CPU acceleration (Linux/Windows x86_64)
mkl = ["candle-core/mkl"]
# Apple Accelerate for Metal acceleration (macOS)
accelerate = ["candle-core/accelerate"]
# NCCL for multi-GPU support
nccl = ["candle-core/nccl"]
# All GPU optimizations (for maximum performance)
gpu = ["flash-attn", "cudnn", "cuda"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.0"
bytemuck = "1.0"
proptest = "1.5"

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "ltx_video_benchmarks"
harness = false

# =============================================================================
# Examples
# =============================================================================

[[example]]
name = "ltx-video"
path = "examples/ltx-video/main.rs"

# Verification examples
[[example]]
name = "verify-dit"
path = "examples/verify/verify_dit.rs"

[[example]]
name = "verify-vae"
path = "examples/verify/verify_vae.rs"

[[example]]
name = "verify-vae-encoder"
path = "examples/verify/verify_vae_encoder.rs"

[[example]]
name = "verify-vae-roundtrip"
path = "examples/verify/verify_vae_roundtrip.rs"


[[example]]
name = "verify-pipeline"
path = "examples/verify/verify_pipeline.rs"

[[example]]
name = "verify-scheduler"
path = "examples/verify/verify_scheduler.rs"

[[example]]
name = "verify-t5"
path = "examples/verify_t5.rs"

[[example]]
name = "verify-pipeline-step"
path = "examples/verify_pipeline_step.rs"

[[example]]
name = "verify-scheduler-math"
path = "examples/verify_scheduler_math.rs"

[[example]]
name = "verify-vae-decode"
path = "examples/verify_vae_decode.rs"

[[example]]
name = "verify-vae-tiling"
path = "examples/verify_vae_tiling.rs"

[[example]]
name = "verify-scheduler-step"
path = "examples/verify_scheduler_step.rs"
required-features = ["flash-attn", "cudnn"]

[[example]]
name = "verify-rng"
path = "examples/verify/verify_rng.rs"

# Debug utilities
[[example]]
name = "debug-t5"
path = "examples/debug/debug_t5.rs"

[[example]]
name = "debug-vae"
path = "examples/debug/debug_vae.rs"

[[example]]
name = "inspect-t5"
path = "examples/debug/inspect_t5.rs"

[[example]]
name = "inspect-vae-weights"
path = "examples/debug/inspect_vae_weights.rs"

[[example]]
name = "dump-t5-embeddings"
path = "examples/debug/dump_t5_embeddings.rs"

[[example]]
name = "check-t5-shapes"
path = "examples/debug/check_t5_shapes.rs"

[[example]]
name = "list-gguf-tensors"
path = "examples/debug/list_gguf_tensors.rs"

[[example]]
name = "test-rng"
path = "examples/debug/test_rng.rs"
